# audio-feature-lab

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md
.github/workflows/: ci.yml
benches/: README.md
configs/: README.md  default.toml  minimal.toml  research.toml
configs/profiles/: minimal.toml  research.toml
crates/afl-essentia/: Cargo.toml
crates/afl-essentia-sys/: Cargo.toml  build.rs
crates/afl-essentia-sys/src/: lib.rs
crates/afl-essentia/src/: lib.rs
crates/audio-feature-lab-cli/: Cargo.toml
crates/audio-feature-lab-cli/src/: main.rs
crates/audio-feature-lab-config/: Cargo.toml
crates/audio-feature-lab-config/src/: lib.rs
crates/audio-feature-lab-core/: Cargo.toml
crates/audio-feature-lab-core/benches/: phase9.rs
crates/audio-feature-lab-core/src/: domain.rs  lib.rs  pipeline.rs  storage.rs  walker.rs
crates/audio-feature-lab-ffi/: Cargo.toml
crates/audio-feature-lab-ffi/src/: lib.rs  mpeg7.rs
docs/: README.md  architecture.md  benchmarking.md  feature-schema.md  ffi-boundary.md  licensing.md  performance.md  platforms.md  profiles.md
docs/agent/: architecture.md  execution-plan.md  features-vocabulary.md  ffi-boundary.md  json-schema.md  licensing.md  performance.md  platforms.md  profiles.md
fixtures/: README.md
native/essentia-wrapper/: CMakeLists.txt
native/essentia-wrapper/include/: afl_essentia_wrapper.h
native/essentia-wrapper/src/: afl_essentia_wrapper.cpp
