[package]
name = "audio-feature-lab"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
audio-feature-lab-config = { path = "../audio-feature-lab-config" }
audio-feature-lab-core = { path = "../audio-feature-lab-core" }
audio-feature-lab-ffi = { path = "../audio-feature-lab-ffi" }
serde_json = "1.0.145"
