[package]
name = "audio-feature-lab-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
audio-feature-lab-config = { path = "../audio-feature-lab-config" }
audio-feature-lab-ffi = { path = "../audio-feature-lab-ffi" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
