[package]
name = "audio-feature-lab-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
native-backend = ["audio-feature-lab-ffi/native-backend"]

[dependencies]
audio-feature-lab-config = { path = "../audio-feature-lab-config" }
audio-feature-lab-ffi = { path = "../audio-feature-lab-ffi" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "phase9"
harness = false
