[package]
name = "audio-feature-lab-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
native-backend = ["afl-essentia/native-backend"]

[dependencies]
afl-essentia = { path = "../afl-essentia" }
audio-feature-lab-config = { path = "../audio-feature-lab-config" }
